# geltools

./: CMakeLists.txt  README.md
cmake/: FindCython.cmake  FindHTSlib.cmake
doc/: Doxyfile  Doxyfile.in
doc/notes/: Makefile  cite.bib  template.latex  text.md
src/: CMakeLists.txt  impute_r2.cpp  impute_r2.h  io.cpp  io.h  main.cpp  parameters.cpp  parameters.h  r2.r
tests/: CMakeLists.txt  NA11933_chr20_5mb.vcf.gz.tbi  beagle_out.vcf.gz.tbi  beagle_out2.af  beagle_out2.af.r2id  beagle_out2.vcf  beagle_out_samll.vcf  exp1.demo  impute_r2.cc  io.cc  run_concordance.sh  simulated_data.vcf.gz.tbi  simulated_data_6_haplotypes.vcf  test.vcf.gz.info  test.vcf.gz.ped  test.vcf.gz.tbi  test1.fq  test2.vcf  test2.vcf.gz.tbi  test_duotrio.vcf.gz.tbi  test_duotrio2.vcf  test_duotrio2.vcf.gz.tbi  test_duotrio2.vcf.ped  test_duotrio2.vcf.ped.swe  test_info.vcf  test_info.vcf.info  test_small.vcf  test_small.vcf.info  test_small_6.vcf  test_small_6.vcf.gz.tbi
tests/winni_regression/: ALL.chr20.unionAC10NM.founders.B7.R1.P8.M30.K100.W500kb.inInt.inTruth.GL.head1000.freqs  CGI2.ILLU1M.sample  README  measure.sh  measureAggregateRsquare  olivierBins.txt  test.EUR.all.map  test.EUR.snps  test.freq  test_one_row.EUR.snps  test_one_row.EUR.snps.map  test_one_row.freq  test_one_row.samples  test_one_row.vcf  test_one_row_geltools.freq.r2  truth.samples  truth_one_row.vcf
